# MAGNMS

./: CMakeLists.txt  README.md  halo_extractor
include/: halo_extraction_classes.h  link_halos.h  read_files.h  triaxiality.h
src/: haloExtractor.cpp  linkHalos.cpp  readFiles.cpp  readFort.f90  triaxiality.cpp
